<resources>
    <string name="app_name">Contact Manager</string>
    <string name="action_settings">Settings</string>
    <string name="menu_item_edit">Edit</string>
    <string name="menu_item_delete">Delete</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone Number</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
    <string name="zip_code">Zip code</string>
    <string name="confirm_title">Delete Contact?</string>
    <string name="confirm_message">Are you sure you want to delete this contact? </string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="contact_added">Contact added</string>
    <string name="contact_updated">Contact updated</string>
    <string name="contact_deleted">Contact deleted</string>
    <string name="invalid_query_uri">Invalid query Uri</string>
    <string name="insert_failed">Insertion of new record failed</string>
    <string name="invalid_insert_uri">Invalid insert Uri</string>
    <string name="invalid_update_uri">Invalid update Uri</string>
    <string name="invalid_delete_uri">Invalid delete Uri</string>
    <string name="contact_not_added">Contact Added</string>
    <string name="contact_not_updated">Contact Updated</string>
    <string name="invalid_contact">Invalid contact, please specify name</string>
    <string name="first_run_message">Press the + button to add a new contact</string>
    <string name="preference_file_key">com.service_fusion.bukola_omotoso.contactmanager.PREFERENCE_FILE_KEY</string>

</resources>
